@@ -1,3 +1,8 @@
+2006-12-06  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-alpha.c (elf64_alpha_merge_symbol_attribute): New function.
+	(elf_backend_merge_symbol_attribute): Define.
+
 2006-12-04  Jan Beulich  <jbeulich@novell.com>
 
 	* elflink.c (_bfd_elf_link_create_dynamic_sections): Don't create
